Added fix to improve the performance
Signed-off-by: Dhanendra Sahu <dhanendra.tech@gmail.com>